--- a/example/index.html
+++ b/example/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>RemoteStorage Demo</title>
-    <script type="text/javascript" src="./lib/remotestorage-1.0.3.js"></script>
-    <script src="./lib/remotestorage-widget-1.3.0.js"></script>
+    <script type="text/javascript" src="./node_modules/remotestoragejs/release/remotestorage.js"></script>
+    <script src="./node_modules/remotestorage-widget/build/widget.js"></script>
     <script>
 
       function handleEvent(event) {
