Example application modified with the webfinger and oauth endpoints.

--- a/example/index.html
+++ b/example/index.html
@@ -8,78 +8,369 @@
     <script src="../node_modules/remotestorage-widget/build/widget.js"></script>
 
     <!-- ignore below :: code pane / logging  pane setup -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> <!-- only needed for logging and code panes -->
     <script src="ignore/logging.js"></script> <!-- helper JS functionality to support showing source code for this file in the UI -->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="ignore/styles.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- ignore above :: code pane / logging  pane setup -->
   </head>
 
   <body>
+    <p id="getwider">  |<---->| Cannot view, screen to narrow, please revisit on a wider device.</p>
+    <div id="window">
+      <div id="demoview">
 
-    <!-- ignore below :: code pane / logging  pane setup -->
-    <div class="ui grid">
-      <div id="window" class="row">
-        <div id="appview" class="sixteen wide eight wide computer column">
-          <div class="ui icon message">
-            <i class="info icon"></i>
-            <div class="content">
-              <div class="header">
-                This page should be seen in widescreen on a PC.
-              </div>
-              <p>This way you'll get a log pane and a code pane to review the demo.</p>
-            </div>
-          </div>
-          <!-- ignore above :: code pane / logging  pane setup -->
+        <div id="remotestorage-widget-anchor"></div>
 
-          <!-- DEMO UI START -->
-          <h1>DEMO</h1>
+        <!--- =========================================================================
+                                              ** UI Forms **
+              ========================================================================= -->
 
-          <!-- DEMO UI END -->
-
-        <!-- ignore below :: code pane / logging  pane setup -->
+        <!-- serverInfo -->
+        <div class="w3-panel w3-card w3-light-grey">
+          <form id="serverInfo"><p>
+            <input name="server" class="w3-input" type="text" onchange="scrubForm(event)"><label>server</label>
+            <input name="user" class="w3-input" type="text" onchange="scrubForm(event)"><label>user</label>
+            <input name="token" class="w3-input" type="text" onchange="scrubForm(event)"><label>token</label>
+            <input name="scope" class="w3-input" type="text" onchange="scrubForm(event)"><label>scope</label>
+          </p></form>
         </div>
-        <div class="eight wide computer only column">
-          <div id="logview">
-            <div id="logviewcontents"></div>
-          </div>
-          <div id="codeview">
-            <iframe id="codeframe" src="ignore/code.html#welcome.txt"></iframe>
-          </div>
+
+        <!-- getWebFinger -->
+        <div class="w3-panel w3-card">
+          <details><summary class="usecase">GET /.well-known/webfinger</summary><p>
+            Uses <em>user</em> and </em><em>server</em> from above to find out <em>remotestorageHref</em> &mdash; the location of user's storage.  This is <em>webfinger</em>, no need for token.  This endpoint format is per draft-dejong spec.
+          </p></details>
+          <p><button class="w3-btn w3-blue w3-left-align w3-block" onclick="getWebFinger()">run getWebFinger()</button></p>
+        </div>
+
+        <!-- remotestorageInfo -->
+        <div class="w3-panel w3-card w3-light-grey">
+          <form id="remotestorageInfo"><p>
+            <input name="remotestorageHref" class="w3-input" type="text" onchange="scrubForm(event)"><label>run remotestorageHref</label>
+          </p></form>
+        </div>
+
+        <!-- getHostMeta -->
+        <div class="w3-panel w3-card">
+          <details><summary class="usecase">GET /.well-known/host-meta.json</summary><p>
+            Discovery endpoint; look in the log (upper right pane).  Provides <em>webfinger</em> resource template for the server called. In this app it's just informational, the <em>GET /.well-known/webfinger</em> above is used as it is per draft-dejong spec; no need discover endpoint template.
+          </p></details>
+          <p><button class="w3-btn w3-blue w3-left-align w3-block" onclick="getHostMeta()">run getHostMeta()</button></p>
+        </div>
+
+        <!-- getAccountMeta -->
+        <div class="w3-panel w3-card">
+          <details><summary class="usecase">GET /webfinger/jrd?resource=acct:...</summary><p>
+            Discovery endpoint; look in the log (upper right pane).  Provides auth URL for a user.  Provides storage resources template.  In this app it's just informational, use <em>GET /.well-known/webfinger</em> above to get these values.
+          </p></details>
+          <p><button class="w3-btn w3-blue w3-left-align w3-block" onclick="getAccountMeta()">run getAccountMeta()</button></p>
+        </div>
+
+        <!-- gotoAuth -->
+        <div class="w3-panel w3-card">
+          <details><summary class="usecase">GOTO authDialogUrl (and redirect back)</summary><p>
+            Goes to OAuth2 login page to provide password.  Use <em>GET /.well-known/webfinger</em> above to populate values below.  After providing credentials you will be redirected back here.
+            <br/><br/>
+            Note that the widget does this for you:  this is the step where the widget takes you to the server for a login if your token is invalid.
+          </p></details>
+          <form id="gotoAuth"><p>
+            <input name="authDialogUrl" class="w3-input" type="text" onchange="scrubForm(event)"><label>authDialogUrl</label>
+            <input name="redirectUrl" class="w3-input" type="text" onchange="scrubForm(event)"><label>redirectUrl</label>
+            <input name="scope" class="w3-input" type="text" onchange="scrubForm(event)"><label>scope</label>
+            <input name="responseType" class="w3-input" type="text" onchange="scrubForm(event)"><label>responseType</label>
+          </p></form>
+          <p><button class="w3-btn w3-blue w3-left-align w3-block" onclick="gotoAuth()">gotoAuth</button></p>
+        </div>
+
+        <!-- postOAuth -->
+        <div class="w3-panel w3-card">
+          <details><summary class="usecase">POST oauth</summary><p>
+            Submits credentials directly from this form.  Just for testing; don't write your login pages this way.  Use the login page served by the server as per <em>GOTO authDialogUrl (and redirect back)</em> above.
+            <br/><br/>
+            Note that the widget does this for you:  this is the form submission from the server login called by the widget.
+          </p></details>
+          <form id="postOAuth"><p>
+            <input name="user" class="w3-input" type="text" onchange="scrubForm(event)"><label>user</label>
+            <input name="password" class="w3-input" type="text" onchange="scrubForm(event)"><label>password</label>
+            <input name="redirectUrl" class="w3-input" type="text" onchange="scrubForm(event)"><label>redirectUrl</label>
+            <input name="scope" class="w3-input" type="text" onchange="scrubForm(event)"><label>scope</label>
+            <input name="responseType" class="w3-input" type="text" onchange="scrubForm(event)"><label>responseType</label>
+          </p></form>
+          <p><button class="w3-btn w3-blue w3-left-align w3-block" onclick="postOAuth()">postOAuth</button></p>
+        </div>        
+
+      </div>
+      <div id="panes">
+        <div id="logview">
+          <div id="logviewcontents"></div>
+        </div>
+        <div id="codeview">
+          <iframe id="codeframe" src="ignore/code.html#welcome.txt"></iframe>
         </div>
       </div>
     </div>
-    <!-- ignore above :: code pane / logging  pane setup -->
-
   </body>
   <script>
+
+    /* =========================================================================
+                                ** Initialization **
+       ========================================================================= */
+
+    // - save off URL params from load/refresh as widget will mangle them
+    // - init logging whenever page refreshed
+    // - create a new global 'remoteStorage' instance whenever screen refreshed
+    // - re-init 'data' including any 'state' values from URL in case of manual (non-widget) oauth redirect
+    //   - see gotoAuth and postOAuth
+    // - pre-fill all forms based on loaded/default 'data'
+    // - on DOM load initialize, attach widget, starts widget event listening to global 'remoteStorage'
+    //   - if was connected in localstorage before refresh/load, global 'remoteStorage' reconnects
+    //   - if was disconnected in localstorage (e.g. calls to gotoAuth and postOAuth disconnect) before refresh/load, then global 'remoteStorage' stays disconnected
+
+    const params = (new URLSearchParams(window.location.hash.substr(1))); // extract hash as params, as per draft-dejong
+    log('loading ', {href: window.location.href, params: params.toString()});
+
     window.onload = function () {
       showPostScreenSetupLogs(); // ignore above :: logging setup
     }
   
-    log("example demo application");
+    log('initialize remoteStorage used by app: widget and non-widget');
+    var remoteStorage = new RemoteStorage({logging: true, cache: false});
 
-    function handleEvent(event) {
-      console.error('HANDLE EVENT: ', event);
-    }
-
-    const remoteStorage = new RemoteStorage({logging: true, cache: false});
-    remoteStorage.access.claim('myfavoritedrinks', 'rw');
+    log("initialize data -- state for use-cases -- to empty");
+    var data = {
+      scope: 'myfavoritedrinks:rw',
+      responseType: 'token',
+      token: params.get('access_token')
+    };
+    unmarshal();
+    fillForms();
 
     document.addEventListener('DOMContentLoaded', function() {
+      remoteStorage.access.claim(data.scope, 'rw');
       const widget = new Widget(remoteStorage);
-      widget.attach();
+      attachEvents('appStorage', remoteStorage);
+      log('in DOMContentLoaded :: attaching remoteStorage to widget');
+      log('attaching to #remotestorage-widget-anchor element');
+      widget.attach('remotestorage-widget-anchor');
     });
 
-    remoteStorage.on('connected', handleEvent);
-    remoteStorage.on('network-offline', handleEvent);
-    remoteStorage.on('network-online', handleEvent);
-    remoteStorage.on('connected', handleEvent);
+    // REMOVE?
+    // const client = remoteStorage.scope(`/${data.scope}/`);
+    // client.getListing('')
+    //   .then(listing => console.log('LISTING :: ' + listing));
 
-    const client = remoteStorage.scope('/myfavoritedrinks/');
-    client.getListing('')
-      .then(listing => console.log('LISTING :: ' + listing));
+    /* =========================================================================
+                         ** Supporting Methods / Utilities **
+       ========================================================================= */
+
+    /**
+     * Marshall select 'data' state for URL passing
+     */ 
+    function marshal() {
+      var {server, user, remotestorageHref} = data;
+      return btoa(JSON.stringify({ server: server, user: user, remotestorageHref: remotestorageHref }));
+    }
+
+    /**
+     * Unmarshal select 'data' state from passed in URL
+     */
+    function unmarshal() {
+      if (params.has('state') && params.get('state')) {
+        var state = JSON.parse(atob(params.get('state')));
+        log(`unmarshalled 'state' from URL params`, state);
+        updateData(state);
+      }
+    }
+
+    /**
+     * Update use-case 'data' (global) with JSON passed in.
+     * 
+     * SIDE EFFECT:  refreshes all forms.
+     */ 
+    function updateData(withWhat) {
+      data = {...data, ...withWhat};
+      fillForms();
+    }
+
+    /**
+     * Scrub form fields of the caller's form into 'data'
+     * 
+     * @param {} event -- event originating from an input within a form to scrub
+     */
+    function scrubForm(event) {
+      var form = event.target.form;
+      var json = {};
+      for (element of form) {
+        json[element.name] = element.value;
+      }
+      updateData(json);
+    }
+
+    /**
+     * Fill form fields from JSON
+     * 
+     * @param {string} formId - element ID of the form to fill
+     * @param {Object} values - object to source values from by keys matching form field 'names'
+     * @param {boolean} disabled - if true, the form is disabled, default, false
+     */
+    function disableForm(formId, disabled) {
+      var form = document.getElementById(formId);
+      for (element of form) {
+        element.disabled = !!disabled;
+      }
+    }
+
+    /**
+     * Go through all forms and fill matching fields with 'data' (data attribut -> field name)
+     */
+    function fillForms() {
+      for (form of document.forms) {
+        for (element of form) {
+          if (element.name in data) {
+            element.value = data[element.name];
+          }
+        }
+      }
+    }
+
+    /* =========================================================================
+                                    ** Events **
+       ========================================================================= */
+
+    /**
+     * Handle events from remotestorage instance.
+     * 
+     * @param {String} tag -- descriptive tag for remotestorage instance
+     * @param {} rsInstance -- to handle events for
+     */
+    function attachEvents(tag, rsInstance) {
+      log('initialize remotestorage event handlers for instance :: ' + tag);
+      rsInstance.on('connected', onConnected);
+      rsInstance.on('not-connected', onNotConnected);
+      rsInstance.on('ready', onReady);
+      rsInstance.on('disconnected', onDisconnect);
+      rsInstance.on('error', onError);
+
+      function onConnected (event) {
+        log(`onConnected :: start`, {tag: tag, event: event})
+        let userLineParts = rsInstance.remote.userAddress.split('@');
+        let protocol = rsInstance.remote.href.match(/^[a-z]+:\/\//ig);
+        let scope = Object.keys(rsInstance.access.scopeModeMap)[0];
+        let token = rsInstance.remote.token;
+        updateData({
+          user: userLineParts[0], 
+          server: protocol + userLineParts[1],
+          scope: scope,
+          token: token});
+        log(`onConnected :: set data`, {tag: tag, event: event, data: data});
+        log(`onConnected :: disabling serverInfo entry`,{tag: tag, event: event});
+        disableForm('serverInfo', true);
+      }
+
+      function onNotConnected (event) {
+        log(`onNotConnected :: start`, {tag: tag, event: event})
+        log(`onConnected :: re-enabling serverInfo entry`, {tag: tag, event: event});
+        disableForm('serverInfo', false);
+      }
+
+      function onReady (event) {
+        log(`onReady :: start`, {tag: tag, event: event})
+      }
+
+      function onDisconnect (event) {
+        log(`onDisconnect :: start`, {tag: tag, event: event})
+      }
+
+      function onError (event) {
+        log(`onError :: start`, {tag: tag, event: event})
+      }
+    }
+
+    /* =========================================================================
+                          ** Form Actions / Use Case Functions **
+       ========================================================================= */
+
+    async function getWebFinger() {
+      log('getWebFinger :: start');
+      let url = `${data.server}/.well-known/webfinger?resource=acct:${data.user}@${data.server}`;
+      log(`getWebFinger :: GET ${url}`);
+      let result = await fetch(url, { 
+        method: "GET", 
+        headers: { "Accept": "application/jrd+json, application/json" }
+      })
+      .then(res => res.json())
+      .catch(error => log(`getWebFinger :: GET error`,{error: error}));
+      log(`getWebFinger :: result`, result);
+      let hits = result.links.filter((i) => 'rel' in i && i['rel'] == 'remotestorage');
+      if (hits) {
+        updateData({
+          remotestorageHref: hits[0].href, 
+          authDialogUrl: hits[0].properties['http://tools.ietf.org/html/rfc6749#section-4.2'],
+          redirectUrl: window.location.protocol + '//' + window.location.host + window.location.pathname
+        });
+        log(`getWebFinger :: setting remoteStorageHref := ${data.remotestorageHref}`);
+        log(`getWebFinger :: setting authDialogUrl := ${data.authDialogUrl}`);
+      }
+    }
+
+    async function getHostMeta() {
+      log('getHostMeta :: start');
+      let url = `${data.server}/.well-known/host-meta.json`;
+      log(`getHostMeta :: GET ${url}`);
+      let result = await fetch(url, { 
+        method: "GET", 
+        headers: { "Accept": "application/jrd+json, application/json" }
+      })
+      .then(res => res.json())
+      .catch(error => log(`getHostMeta :: GET error`,{error: error}));
+      log(`getHostMeta :: result`, result);
+    }
+
+    async function getAccountMeta() {
+      log('getAccountMeta :: start');
+      let url = `${data.server}/webfinger/jrd?resource=acct:${data.user}@${data.server}`;
+      log(`getAccountMeta :: GET ${url}`);
+      let result = await fetch(url, { 
+        method: "GET", 
+        headers: { "Accept": "application/jrd+json, application/json" }
+      })
+      .then(res => res.json())
+      .catch(error => log(`getAccountMeta :: GET error`,{error: error}));
+      log(`getAccountMeta :: result`, result);
+    }
+
+    async function gotoAuth() {
+      remoteStorage.disconnect();
+      window.location.href = `${data.authDialogUrl}?redirect_uri=${encodeURIComponent(data.redirectUrl)}&scope=${encodeURIComponent(data.scope)}&response_type=${data.responseType}&client_id=${encodeURIComponent(data.redirectUrl)}&state=${marshal()}`
+    }
+
+    async function postOAuth() {
+      log('postOAuth :: start');
+      log('postOAuth :: disconnecting current remoteStorage, if any');
+      remoteStorage.disconnect();
+      let url = `${data.server}/oauth`;
+      let extraParams = {
+        client_id: data.redirectUrl,
+        redirect_uri: data.redirectUrl,
+        response_type: data.responseType,
+        state: marshal(),
+        username: data.user,
+        allow: 'Allow'
+      };
+      log(`postOAuth :: POST as Web form ${url}`);
+      let form = document.getElementById('postOAuth');
+      form.setAttribute("method", 'POST');
+      form.setAttribute("action", url);
+      for(var param in extraParams) {
+        var field = document.createElement("input");
+        field.setAttribute("type", "hidden");
+        field.setAttribute("name", param);
+        field.setAttribute("value", extraParams[param]);
+        form.appendChild(field);
+      }
+      form.submit();
+    }
 
   </script>
 
