--- a/example/index.html
+++ b/example/index.html
@@ -47,7 +47,7 @@
         <!-- remotestorageInfo -->
         <div class="w3-panel w3-card w3-light-grey">
           <form id="remotestorageInfo"><p>
-            <input name="remotestorageHref" class="w3-input" type="text" onchange="scrubForm(event)"><label class="w3-text-blue">run remotestorageHref</label>
+            <input name="remotestorageHref" class="w3-input" type="text" onchange="scrubForm(event)"><label class="w3-text-blue">remotestorageHref</label>
           </p></form>
         </div>
 
