Fixes as per PR

--- a/example/index.html
+++ b/example/index.html
@@ -205,7 +205,7 @@
 
     log("initialize data -- state for use-cases -- to empty");
     var data = {
-      scope: 'armadietto.example:rw',
+      scope: 'armadietto-example:rw',
       responseType: 'token',
       token: params.get('access_token'),
       httpMethod: 'PUT',
