Fixes as per PR

--- a/example/index.html
+++ b/example/index.html
@@ -182,7 +182,7 @@
                                 ** Initialization **
        ========================================================================= */
 
-    // - save off URL params from load/refresh as widget will mangle them
+    // - save off URL params from load/refresh as widget will rewrite them
     // - init logging whenever page refreshed
     // - create a new global 'remoteStorage' instance whenever screen refreshed
     // - re-init 'data' including any 'state' values from URL in case of manual (non-widget) oauth redirect
