Add hosted load test link.

--- a/example/load.html
+++ b/example/load.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>RemoteStorage Demo</title>
-    <script type="text/javascript" src="../node_modules/remotestoragejs/release/remotestorage.js"></script>
-    <script src="../node_modules/remotestorage-widget/build/widget.js"></script>
+    <title>RemoteStorage Load Test</title>
+    <script src="https://cdn.jsdelivr.net/npm/remotestoragejs@latest/release/remotestorage.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/remotestorage-widget@latest/build/widget.js"></script>
 
     <!-- ignore below :: code pane / logging  pane setup -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> <!-- only needed for logging and code panes -->
